# django-errors

./: .gitignore  pyproject.toml
djangoerrors/: manage.py
djangoerrors/djangoerrors/: asgi.py  settings.py  urls.py  wsgi.py
djangoerrors/djangoerrors/errors/: __init__.py  admin.py  apps.py  models.py  views.py
djangoerrors/djangoerrors/errors/migrations/: 0001_initial.py  0002_thing2_file.py
