[tool.poetry]
name = "django-errors"
version = "0.1.0"
description = "Testování chyby ve django"
authors = ["Timothy Hobbs <timothy@hobbs.cz>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.2.3"
celery = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
